@@ -71,6 +71,7 @@ Chronological list of authors
   - Utkarsh Saxena
   - Abhinav Gupta
   - John Detlefs
+  - Bart Bruininks
 
 External code
 -------------
